Fixed overflow of elements inside rawJson

--- a/style.css
+++ b/style.css
@@ -351,6 +351,7 @@ input:disabled {
 
 .rawString {
     color: #ffcc99;
+    overflow-wrap: anywhere;
 }
 
 .rawNull {
